Versión2 ajustes finales

--- a/index.html
+++ b/index.html
@@ -338,8 +338,8 @@ App móvil para un gimnasio que gestiona usuarios, membresías y rutinas, con AP
 
 <div class="col-lg-6 texto  contact-info">
      <p class="contact-text">
-        Si tienes alguna duda o deseas trabajar conmigo,  
-        puedes contactarme usando este formulario o a través de:
+             Si tienes alguna duda o quieres ponerte en contacto conmigo,  
+        puedes hacerlo usando este formulario.
     </p><br>
 
     <p class="mb-4 contact-text">
@@ -409,22 +409,10 @@ App móvil para un gimnasio que gestiona usuarios, membresías y rutinas, con AP
 </div>
 
 
-
-
-<br><br>
-
-
-
-
-
-
-
 </div>
 </div>
-<!-- container -->
     </div>
         <script src="js/scrollreveal.js"></script>
-
 <script src="js/index.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://kit.fontawesome.com/5adba01a83.js" crossorigin="anonymous"></script>
